--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,5 @@
-external:
-  base-url: http://localhost:8080
-
 server:
   port: 8081
 spring:
-    datasource:
-      url: jdbc:h2:mem:testdb
-      driver-class-name: org.h2.Driver
-      username: sa
-      password: ""
-
-    jpa:
-      database-platform: org.hibernate.dialect.H2Dialect
-      hibernate:
-        ddl-auto: update
-
-    h2:
-      console:
-        enabled: true
-        path: /h2-console
+  profiles:
+    active: dev
